--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 * {
   margin: 0;
   padding: 0;
+  /* font-family: "montserrat", sans-serif; */
+  font-family: "Varela Round", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 body {
@@ -14,7 +18,7 @@ body {
   padding: 30px;
   padding-right: 0px;
   padding-left: 40px;
-  background-color: coral;
+  background-color: white;
   color: white;
   /* position: fixed; */
   /* right: 0px; */
@@ -24,8 +28,9 @@ body {
 
 .nav-logo {
   font-family: "Dancing Script", cursive;
-  font-size: larger;
+  font-size: 1.2rem;
   font-weight: bold;
+  color: #be9278;
 }
 
 .nav-right {
@@ -41,27 +46,30 @@ body {
   flex-direction: row;
   column-gap: 20px;
   text-transform: uppercase;
+  color: black;
 }
 
 .nav-visit {
-  background-color: #feb47b;
+  background-color: #be9278;
   padding: 39px;
 }
 
 .hero {
   /* background: radial-gradient(circle, #ff7e5f, #feb47b); */
-  height: 100vh;
+  height: 110vh;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: linear-gradient(
+  background-image: url(../images/pic22.png);
+  background-attachment: fixed;
+  /* background: linear-gradient(
     to bottom,
     rgba(255, 126, 95, 0.8),
     rgba(254, 180, 123, 0.8)
-  );
+  ); */
 }
 
 .hero h1 {
@@ -77,14 +85,13 @@ body {
 .hero-button :first-child {
   padding: 20px 30px;
   border: none;
-  background-color: coral;
+  background-color: #be9278;
   color: white;
   border-radius: 5px;
 }
 
 .hero-section {
-  background-color: rgba(0, 0, 0, 0.2);
-
+  background-color: rgba(0, 0, 0, 0.5);
   height: 100%;
   width: 100%;
   display: flex;
@@ -93,7 +100,7 @@ body {
 }
 
 .hero-left {
-  width: 60%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -105,8 +112,8 @@ body {
 .hero-image {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  width: 40%;
+  justify-content: last baseline;
+  width: 50%;
   /* height: 100px;
   padding-top: 50px; */
 }
@@ -115,4 +122,353 @@ body {
   height: 94.1%;
   position: relative;
   top: 20px;
+}
+
+.clients-area {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  /* row-gap: 20px; */
+}
+
+.clients-layer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  /* row-gap: 40px; */
+}
+
+.sewing {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 20px;
+}
+
+.sewing img {
+  height: 350px;
+  width: 300px;
+  border-radius: 6%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.sewing-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  column-gap: 20px;
+}
+
+.sewing-text h2 {
+  color: #be9278;
+}
+
+.mesurement {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 20px;
+}
+
+.mesurement img {
+  height: 350px;
+  width: 300px;
+  border-radius: 6%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.mesurement h2 {
+  color: #be9278;
+}
+
+.ready-made {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 20px;
+}
+
+.ready-made img {
+  height: 350px;
+  width: 300px;
+  border-radius: 6%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.ready-made h2 {
+  color: #be9278;
+}
+
+.clients-layer h2 {
+  font-size: 2rem;
+}
+
+.about {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.aboutright {
+  width: 50%;
+  /* max-width: 500px;
+  margin-left: 80px; */
+  height: 130vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f2e1d9;
+  column-gap: 20px;
+  /* background-color: #f5ebe4;
+  padding: 30px;
+  max-width: 500px;
+  margin-left: 80px; */
+}
+
+.aboutright h2 {
+  font-size: 2rem;
+  color: #c6a16e;
+}
+
+.aboutright button {
+  padding: 20px 30px;
+  text-transform: uppercase;
+  color: white;
+  background-color: #ba8d72;
+  border: none;
+  width: fit-content;
+  cursor: pointer;
+}
+
+.aboutright-text {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  row-gap: 20px;
+}
+
+.aboutleft {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  width: 50%;
+}
+
+.aboutleft img {
+  height: 60%;
+  position: relative;
+  float: left;
+}
+
+.service {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
+  row-gap: 20px;
+}
+
+.toptext {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 20px;
+}
+
+.service h2 {
+  text-align: center;
+  font-size: 3rem;
+  color: #c6a16e;
+}
+
+.specials {
+  height: 40vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.specials h2 {
+  color: #be9278;
+}
+
+.specials-points {
+}
+
+.specials-points h2 {
+  color: #be9278;
+}
+
+.specials-layer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  width: 80%;
+  row-gap: 10px;
+}
+
+.specials-layer h2 {
+  font-size: 1.5rem;
+  color: #c6a16e;
+}
+
+.show {
+  background-image: url(../images/pic21.png);
+  width: 100%;
+  background-attachment: fixed;
+  height: 70vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+/* .show-image {
+  ba
+  width: 100%;
+  height: 70%;
+
+} */
+
+.testimonials {
+  padding: 40px 0;
+  background: #f1f1f1;
+  color: #434343;
+  text-align: center;
+}
+
+.inner {
+  max-width: 1200px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 20px;
+}
+
+.inner h1 {
+  font-size: 2rem;
+  color: #c6a16e;
+}
+
+.border {
+  width: 160px;
+  height: 5px;
+  background: #be9278;
+  margin: 26px auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.col {
+  flex: 33.33%;
+  max-width: 33.33%;
+  box-sizing: border-box;
+  padding: 15px;
+}
+
+.testimonial {
+  background: #fff;
+  padding: 30px;
+}
+
+/* .testimonial img {
+  width: 100px;
+  height: 100px;
+} */
+
+.name {
+  font-size: 20px;
+  text-transform: uppercase;
+  margin: 20px 0;
+  /* color: #be9278; */
+}
+
+.stars {
+  /* color: #be9278; */
+  margin-bottom: 20px;
+}
+
+.socials {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 40px;
+  height: 100vh;
+  padding: 20px 0;
+}
+
+.socials-images {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 20px;
+}
+
+.socials h2 {
+  font-size: 2rem;
+  color: #c6a16e;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-image: url(../images/pic27.png);
+  /* height: 40vh; */
+}
+
+.footer-contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 20px;
+  color: #be9278;
+  width: 25%;
+}
+
+.footer-contact p a {
+  text-decoration: none;
+  color: #f1f1f1;
+}
+
+.footer-contact p {
+  width: 80%;
+  text-align: center;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 20px;
+  color: #be9278;
+  width: 25%;
+}
+
+.footer-map {
+  width: 600px;
+}
+
+.footer-map img {
+  width: 600px;
 }
